fix #1 image full width links under tweets -> on mobile full width text smaller on mobile

--- a/assets/styles/_partials/_footer.scss
+++ b/assets/styles/_partials/_footer.scss
@@ -1,27 +1,53 @@
-footer{
+footer {
   display: flex;
   flex-direction: column;
 }
+
 footer article {
-  width: 50%;
-  max-width: 50%;
+  width: 90%;
+  max-width: 90%;;
   display: flex;
   flex-direction: column;
   align-self: flex-end;
 }
 
-footer article h3{
+footer article h3 {
+  font-size: 1.1rem;
   margin-top: .75rem;
   margin-bottom: .75rem;
 }
+
 footer article h3 a:link,
 footer article h3 a:hover,
 footer article h3 a:visited,
-footer article h3 a:active{
+footer article h3 a:active,
+footer h5 a:link,
+footer h5 a:hover,
+footer h5 a:visited,
+footer h5 a:active {
   color: $secondary;
 }
 
-footer h5{
+footer h5 {
   text-align: center;
   margin-top: 5rem;
+}
+
+
+@media only screen and (min-width: 800px) {
+  footer article {
+    width: 80%;
+    max-width: 80%;
+  }
+
+  //footer article h3 {
+  //  font-size: 1.2rem;
+  //}
+}
+
+@media only screen and (min-width: 1200px) {
+  footer article {
+    width: 50%;
+    max-width: 50%;
+  }
 }
