--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -41,16 +41,32 @@ html, body, p{
 
 .tweeter .tweet .content{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
-.tweeter .tweet img{
-  width: 100px;
+.tweeter .tweet .content .caption{
+  width: 100%;
+  height: 10rem;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  overflow: hidden;
+  align-items: center;
 }
+
+
+.tweeter .tweet .container .caption img{
+  width: 100%;
+  height: auto;
+}
+//
+//.tweeter .tweet img{
+//  width: 100px;
+//}
 
 .tweeter .tweet .text,
 .tweeter .tweet .hashtags{
-  padding: 2px 15px;
+  padding: 15px 15px;
 }
 
 .tweeter h2 .link a:link,
@@ -66,4 +82,12 @@ html, body, p{
 .tweet .link a:active{
   background-color: inherit;
   color: $secondary;
+}
+
+
+@media only screen and (min-width: 1200px) {
+  .tweeter .tweet .content .caption {
+    width: 100%;
+    height: 20rem;
+  }
 }
